# ScreenDimmer

./: CMakeLists.txt  GammaRamp.cpp  GammaRamp.h  README.md  main.cpp  off.cmd  on.cmd
.github/workflows/: build.yml
